--- a/Terceiro Desafio/index.html
+++ b/Terceiro Desafio/index.html
@@ -22,7 +22,7 @@
         <div class="principal__conteudo">
             <div class="principal__conteudo__texto">
                 <h1 class="titulo" id="nome">Maykon <b>Bogéa</b></h1>
-                <p class="subtexto">Olá, eu sou Maykon, no momento estou estudando programação para ser um desenvolvedor de software no futuro proximo</p>
+                <p class="subtexto">Olá, eu sou Maykon, no momento estou estudando programação para ser um desenvolvedor de software no futuro proximo!</p>
             </div>
             <div class="principal__conteudo__redes">
                 <p class="principal__conteudo__redes__subtexto">Acesse minhas redes:</p>
