--- a/Terceiro Desafio/habilidades.html
+++ b/Terceiro Desafio/habilidades.html
@@ -22,9 +22,9 @@
             <div class="principal__conteudo">
                 <div class="principal__conteudo__texto">
                     <h1 id="nome" class="titulo">Minhas <b>Habilidades!</b></h1>
-                    <p class="subtexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quaerat est possimus quibusdam distinctio sed? Dolores deleniti quos, repellat minima nobis laborum est animi numquam dolore! Ut tempora officia obcaecati?
+                    <p class="subtexto">Eu venho treinando minhas habilidades com programação faz um bom tempo, porem após entrar no programa trilhas que conseguir uma real melhora nas minhas habilidades
                     </p>
-                    <p class="subtexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, maiores! Recusandae nobis illum similique at ad, mollitia excepturi hic tempora fugit, accusamus esse maxime sunt. Repudiandae tempora velit molestiae recusandae!
+                    <p class="subtexto">Ao longo do programa, concluir varios cursos e garanti diversos certificados nessa aréa da tecnologia, como certificados em HTML, CSS e JS!
                     </p>
                 </div>
                 <div class="principal__conteudo__redes">
