--- a/Terceiro Desafio/projetos.html
+++ b/Terceiro Desafio/projetos.html
@@ -22,7 +22,7 @@
             <div class="principal__conteudo__projetos">
                 <div class="princial__conteudo__projetos__texto">
                     <h1 id="nome" class="titulo">Meus <b>Projetos!</b></h1>
-                    <p class="subtexto">Já desenvolvi alguns programas em NodeJS, Java, Python e Arduino, porem vou apenas monstrar alguns dos maiores projetos que desenvolvi, sendo eles 2 jogos desenvolvidos com JS e 1 site completo desenvolvido com HTML, CSS e JS para o dia da poesia.</p>
+                    <p class="subtexto">Já desenvolvi alguns programas em NodeJS, Java, Python e Arduino, porem vou apenas monstrar alguns dos maiores projetos que desenvolvi, sendo um site completo desenvolvido com HTML, CSS e JS para o dia da poesia e 2 jogos desenvolvidos com JavaScript na plataforma p5.</p>
                 </div>
                 <div class="principal__conteudo__projetos__imagens ">
                     <div class="card imgRetangleBorder"><img class="imagem__projeto" src="Assets/projeto1.png" alt=""></div>
